agregado de imagen y texto

--- a/src/paginas/motos.html
+++ b/src/paginas/motos.html
@@ -28,33 +28,15 @@
             </div>
 
         </header>
+        <div class="proyec">
+            <h1 class="animate__animated  animate__bounce" >kawasaki argertina</h1>
+            <div class="rojo">
 
-        <div class="main-motos">
-            <div class="img1"><img src="../multimedia/imagenes/ninja400.png" alt="ninja400" class="k400"></div>
-            <div class="img2"><img src="../multimedia/imagenes/vulcans.png" alt="vulcans" class="k400"></div>
-            <div class="img3"><img src="../multimedia/imagenes/kawah2.png" alt="kawasaki h2" class="k400"></div>
-            <div class="nom1">
-                <h2>ninja 400</h2>
-            </div>
-            <div class="nom2">
-                <h2>vulcans</h2>
-            </div>
-            <div class="nom3">
-                <h2>ninja h2</h2>
-            </div>
-            <div class="img4"><img src="../multimedia/imagenes/z400abs.png" alt="ninja z400" class="k400"></div>
-            <div class="img5"><img src="../multimedia/imagenes/klx450.png" alt="klx450" class="k400"></div>
-            <div class="img6"><img src="../multimedia/imagenes/kawaz1000.png" alt="kawasaki 1000" class="k400"></div>
-            <div class="nom4">
-                <h2>ninja z400 abs</h2>
-            </div>
-            <div class="nom5">
-                <h2>klx 450</h2>
-            </div>
-            <div class="nom6">
-                <h2>kawasaki ninja 1000</h2>
+                <img src="../multimedia/imagenes/kawa.webp" alt="moto" class="animate__animated  animate__backInDown">
+
             </div>
         </div>
+      
         <div class="footer">
             <footer>
                 <P>kawasaki argentina 2022 correo: kawasakyargentina@gmail.com</P>
